--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
 }
 
 dependencies {
@@ -24,6 +32,7 @@ dependencies {
     implementation 'com.android.support:support-media-compat:27.1.0'
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -36,5 +45,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
+
+    implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'com.google.android.gms:play-services-maps:10.2.0'
+    implementation 'com.google.android.gms:play-services:10.2.0'
+
+    implementation 'com.firebase:geofire-android:2.1.2'
+    //implementation 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@arr'
+
+    implementation 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
+    implementation 'com.android.support:support-annotations:27.1.1'
+    implementation 'com.android.support:mediarouter-v7:27.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
